--- a/resources/js/components/app.css
+++ b/resources/js/components/app.css
@@ -32,5 +32,10 @@ background: linear-gradient(90deg,#f6ffb7 0%,#96efff 50%, #7cff75 100%);
 
 #app {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
+main {
+  flex-grow: 1;
+}
